tests/baselines/reference/es6ClassTest8(strict=true).errors.txt
es6ClassTest8.ts(14,35): error TS2322: Type 'null' is not assignable to type 'Vector'.
es6ClassTest8.ts(15,48): error TS2322: Type 'null' is not assignable to type 'Vector'.
es6ClassTest8.ts(16,48): error TS2322: Type 'null' is not assignable to type 'Vector'.
es6ClassTest8.ts(17,48): error TS2322: Type 'null' is not assignable to type 'Vector'.
es6ClassTest8.ts(24,46): error TS2322: Type 'null' is not assignable to type 'Vector'.


==== es6ClassTest8.ts (5 errors) ====
    function f1(x:any) {return x;}
    
    class C {
        constructor() {
            var bar:any = (function() {
                return bar; // 'bar' should be resolvable
            });
            var b = f1(f1(bar));
        }
      
    }
    
    class Vector {
        static norm(v:Vector):Vector {return null;}
                                      ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Vector'.
        static minus(v1:Vector, v2:Vector):Vector {return null;}
                                                   ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Vector'.
        static times(v1:Vector, v2:Vector):Vector {return null;}
                                                   ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Vector'.
        static cross(v1:Vector, v2:Vector):Vector {return null;}
                                                   ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Vector'.
    
        constructor(public x: number,
                    public y: number,
                    public z: number) { 
        }
    
        static dot(v1:Vector, v2:Vector):Vector {return null;}    
                                                 ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Vector'.
    
    }              
    
    class Camera {
        public forward: Vector;
        public right: Vector;
        public up: Vector;
        constructor(public pos: Vector, lookAt: Vector) { 
            var down = new Vector(0.0, -1.0, 0.0);
            this.forward = Vector.norm(Vector.minus(lookAt,this.pos));
            this.right = Vector.times(down, Vector.norm(Vector.cross(this.forward, down)));
            this.up = Vector.times(down, Vector.norm(Vector.cross(this.forward, this.right)));    
        }
    }
    
    